# retrieval

./: .gitignore  CMakeLists.txt  readme.txt
VehicleAttr/: color_class.txt  handle.py  mcls.txt  model_class.txt  model_cls.txt  model_mapping_tabel.txt  model_table.txt  vehcile_type.txt
faiss/: swigfaiss.py  swigfaiss.swig
faiss/python/: swigfaiss_wrap.cxx
faiss/tests/: test_blas
include/: Feature.h  Retrieval.h  binary.h  feature.h  featureSql.h  personAttr.h
model/: deploy_googlenet_multilabel_all.prototxt  deploy_person.prototxt  deploy_vehicle.prototxt  file_list  wd_google_id_model_color_iter_100000.caffemodel
personAttrFile/: W.txt  att_index.txt  attributes_index.txt  fea.txt  invWtW.txt  thr.txt
src/: CMakeLists.txt  Retrieval.cpp  main.cpp
src/cfeature/: CMakeLists.txt  Feature.cpp
src/db/: CMakeLists.txt  featureSql.cpp  testSql.cpp
src/main/: CMakeLists.txt  FeatureWithAttrTest.cpp  main.cpp  testMem.cpp  testRead.cpp
src/personAttr/: CMakeLists.txt  personAttr.cpp
src/utils/: CMakeLists.txt
system/: AddData.cpp  CMakeLists.txt  IdmSystem.cpp  RemoveAllData.cpp  binary.cpp  mapSystem.cpp
